--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,25 @@
-spring.devtools.restart.enabled=false
-app.dev.createAdmin=false
 spring.main.banner-mode=off
 logging.level.root=INFO
-server.port=8080
-# Default profile for local development
-spring.profiles.active=dev
+
+# Port is provided by Render (fallback for local runs)
+server.port=${PORT:8080}
+
+# Database configuration driven by environment variables
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/sistema_gestor}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Enable Flyway migrations in deployed environments
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+# App flags
+app.dev.createAdmin=${APP_CREATE_ADMIN:false}
+
+# Allow overriding profile via env (none by default)
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:}
