--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ logging.level.root=INFO
 server.port=${PORT:8080}
 
 # Database configuration driven by environment variables
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/sistema_gestor}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:postgres}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/sistema_gestor}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
+spring.jpa.show-sql=true
 
 # Enable Flyway migrations in deployed environments
 spring.flyway.enabled=true
