--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>10.10.0</version>
+            <version>11.0.0</version> <!-- or the newest available -->
         </dependency>
 
         <!-- Observabilidade -->
