--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
     <description>Backend Spring Boot - Gestor</description>
 
     <properties>
-        <java.version>17</java.version>
+        <!-- Match the Dockerfile base JDK 21 -->
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
@@ -37,6 +38,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!-- PostgreSQL Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -44,11 +51,11 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Flyway (compatível com PostgreSQL 18) -->
+        <!-- Flyway (PG 18 support) -->
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>10.10.0</version>
+            <version>11.0.0</version>
         </dependency>
 
         <!-- Validação (opcional, mas recomendado) -->
