--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>flyway-core</artifactId>
             <version>11.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>11.4.0</version>
+        </dependency>
 
         <!-- Validação (opcional, mas recomendado) -->
         <dependency>
